--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,55 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    font-family: "DM Sans", sans-serif;
+}
+
+/* HEADER WORK */
+.nav {
+    width: 100%;
+    height: 90px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    padding: 33px 130px;
+    background-color: #27272E;
+    /* position: fixed; */
+    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
+    animation: headerSlideDown 0.8s ease forwards;
+}
+
+.nav-child {
+  display: flex;
+  color: white;
+  font-weight: bold;
+  opacity: 90%;
+  gap: 50px;
+  font-size: 16px;
+  margin-left: 762px;
+  font-family: sans-serif;
+}
+
+.nav-btn {
+    background-color: white;
+    font-weight: 1 !important;
+    margin-top: -20px;
+    border-radius: 20px;
+}
+
+.nav-btn-text {
+    color: #27272E;
+    padding: 18px 65px;
+}
+
+/* SCROLLTOTOP BUTTON WORK */
+.scroll-to-top-btn {
+    transition: transform 0.3s ease; /* Smooth transition */
+}
+
+.scroll-to-top-btn:hover {
+    transform: translateY(7px);
+}
+  
