--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,23 @@
     font-family: "DM Sans", sans-serif;
 }
 
+/* LOGO WORK */
+.header {
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+}
+.logo-svg {
+    display: block;
+    width: 200px;
+    height: auto;
+}
+  
+.logo {
+    margin-right: auto;
+    padding: 0;
+    margin-left: -800px;
+    margin-top: -45px;
+}
+
 /* HEADER WORK */
 .nav {
     width: 100%;
@@ -14,7 +31,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    padding: 33px 130px;
+    padding: 33px 280px;
     background-color: #27272E;
     /* position: fixed; */
     box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
@@ -52,4 +69,103 @@
 .scroll-to-top-btn:hover {
     transform: translateY(7px);
 }
+
+/* FOOTER WORK */
+.footer {
+    width: 100%;
+    background-color: #27272E;
+    color: #fff;
+    padding: 40px 300px;
+    /* font-size: 20px; */
+  }
   
+  .footer-top {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
+  
+  .footer-column {
+    flex: 1;
+    min-width: 180px;
+    margin: 0 10px;
+    opacity: 90%;
+    margin-left: 10px;
+  }
+  
+  .footer-column h3 {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  
+  .footer-column ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .footer-column ul li {
+    margin-bottom: 8px;
+    font-size: 16px;
+  }
+  
+  .footer-bottom {
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid #3A3A3A;
+    padding-top: 20px;
+    font-size: 14px;
+  }
+  
+  .social-links {
+    display: flex;
+    justify-content: center;
+  }
+  .social-links a {
+    margin-right: 10px;
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .legal-links {
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    justify-content: center;
+    margin-right: 300px;
+    line-height: 30px;
+    margin-left: 360px;
+  }
+
+  .legal-copyright {
+    opacity: 60%;
+    margin-left: 170px;
+    /* margin-top: 30px; */
+  }
+  
+  .legal-logo {
+    margin-left: 180px;
+  }
+  .legal-links a:hover,
+  .social-links a:hover {
+    text-decoration: underline;
+  }
+
+  .footer-inquire-section {
+    width: 700px;
+  }
+
+  .footer-inquire-heading {
+    font-weight: bold;
+    font-size: 50px;
+    margin-bottom: 3px;
+    opacity: 90%;
+  }
+
+  .footer-inquire-text {
+    opacity: 90%;
+    width: 450px;
+  }
