--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,19 +195,86 @@
   color: white;
   opacity: 90%;
   font-size: 68px;
+  border-right: 5px solid white;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  animation: cursor-blink 0.8s step-end infinite;
+}
+
+.stop-blinking {
+  border-right: none;
+}
+
+@keyframes cursor-blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.home-text2.typing {
+  animation: typing 4s steps(20) 0s forwards;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* runs 3 times */
+/* .home-text2 {
+  color: white;
+  opacity: 60%;
+  font-size: 68px;
   border-right: 5px solid;
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
   animation:
-      typing 2s,
-      cursor .4s step-end infinite alternate;
-}
+    typing 2s steps(16) 0s forwards,
+    deleting 2s steps(16) 6s forwards,
+    typing2 2s steps(21) 9s forwards,
+    deleting2 2s steps(21) 15s forwards,
+    typing3 2s steps(14) 18s forwards,
+    deleting3 2s steps(14) 23s forwards,
+    infiniteLoop 0s infinite,
+    cursor .4s step-end infinite alternate;
+} */
 
-@keyframes cursor {
+/* @keyframes cursor {
   50% { border-color: transparent; }
 }
 
 @keyframes typing {
   from { width: 0; }
+  to { width: 100%; }
 }
+
+@keyframes deleting {
+  from { width: 100%; }
+  to { width: 0; }
+}
+
+@keyframes typing2 {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+@keyframes deleting2 {
+  from { width: 100%; }
+  to { width: 0; }
+}
+
+@keyframes typing3 {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+@keyframes deleting3 {
+  from { width: 100%; }
+  to { width: 0; }
+} */
