--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,176 +10,15 @@ html {
   scroll-behavior: smooth;
 }
 
-/* LOGO WORK */
-.header {
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
-  position: fixed;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 1);
-  opacity: 1;
-  z-index: 999;
-}
-
-
-.logo-svg {
-    display: block;
-    width: 200px;
-    height: auto;
-}
-  
-.logo {
-    margin-right: auto;
-    padding: 0;
-    margin-left: -837px;
-    margin-top: -45px;
-}
-
-/* HEADER WORK */
-.nav {
-    width: 100%;
-    height: 90px;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    padding: 33px 79px;
-    background-color: #27272E;
-    /* position: fixed; */
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
-    animation: headerSlideDown 0.8s ease forwards;
-}
-
-.nav-child {
-  display: flex;
-  color: white;
-  font-weight: bold;
-  opacity: 90%;
-  gap: 50px;
-  font-size: 16px;
-  margin-left: 762px;
-  font-family: sans-serif;
-}
-
-.nav-btn {
-    background-color: white;
-    font-weight: 1 !important;
-    margin-top: -20px;
-    border-radius: 20px;
-}
-
-.nav-btn-text {
-    color: #27272E;
-    padding: 18px 65px;
-}
-
 /* SCROLLTOTOP BUTTON WORK */
 .scroll-to-top-btn {
-    transition: transform 0.3s ease; /* Smooth transition */
+    transition: transform 0.3s ease;
 }
 
 .scroll-to-top-btn:hover {
     transform: translateY(7px);
 }
-
-/* FOOTER WORK */
-.footer {
-    width: 100%;
-    background-color: #27272E;
-    color: #fff;
-    padding: 40px 70px;
-    /* font-size: 20px; */
-  }
-  
-  .footer-top {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-  
-  .footer-column {
-    flex: 1;
-    min-width: 180px;
-    margin: 0 10px;
-    opacity: 90%;
-    margin-left: 10px;
-  }
-  
-  .footer-column h3 {
-    margin-bottom: 10px;
-    font-size: 16px;
-    font-weight: 600;
-  }
-  
-  .footer-column ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .footer-column ul li {
-    margin-bottom: 8px;
-    font-size: 16px;
-  }
-  
-  .footer-bottom {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #3A3A3A;
-    padding-top: 20px;
-    font-size: 14px;
-  }
-  
-  .social-links {
-    display: flex;
-    justify-content: center;
-    margin-right: 47px;
-  }
-
-  .social-links a {
-    margin-right: 10px;
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .legal-links {
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-    justify-content: center;
-    line-height: 30px;
-  }
-
-  .legal-copyright {
-    opacity: 60%;
-    margin-left: 170px;
-    /* margin-top: 30px; */
-  }
-  
-  .legal-logo {
-    margin-left: 180px;
-  }
-  .legal-links a:hover,
-  .social-links a:hover {
-    text-decoration: underline;
-  }
-
-  .footer-inquire-section {
-    width: 700px;
-  }
-
-  .footer-inquire-heading {
-    font-weight: bold;
-    font-size: 50px;
-    margin-bottom: 3px;
-    opacity: 90%;
-  }
-
-  .footer-inquire-text {
-    opacity: 90%;
-    width: 450px;
-  }
+/* END */
 
 /* HOME PAGE */
 .home-banner {
@@ -188,7 +27,7 @@ html {
   background-color: #212121;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   padding: 30px 75px;
-  padding-top: 275px; /* Adjust this as well */
+  padding-top: 275px; /* For Adjusting */
   box-sizing: border-box;
 }
 
@@ -281,15 +120,6 @@ html {
   height: auto;
 } */
 
-
-.scroll-to-top-btn {
-  transition: transform 0.3s ease; /* Smooth transition */
-}
-
-.scroll-to-top-btn:hover {
-  transform: translateY(7px);
-}
-
 .inside-home-banner-btn {
   background-color: white;
   font-weight: 1 !important;
@@ -300,10 +130,11 @@ html {
   color: black;
   padding: 20px 40px;
 }
+/* END */
 
 /* SERVICES SECTION */
 .services-banner {
-  height: 1314px;
+  height: 1370px;
   width: 100%;
   background-color: #27272E;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -328,3 +159,40 @@ html {
   margin-top: 30px;
   opacity: 30%;
 }
+/* END */
+
+/* CASE STUDY SECTION */
+.case-study-banner {
+  height: 14px;
+  width: 100%;
+  background-color: #212121;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 30px 75px;
+  padding: 110px 75px; /* For Adjusting */
+  box-sizing: border-box;
+}
+/* END */
+
+/* PORTFOLIO SECTION */
+.portfolio-banner {
+  height: 14px;
+  width: 100%;
+  background-color: #27272E;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 30px 75px;
+  padding: 110px 75px; /* For Adjusting */
+  box-sizing: border-box;
+}
+/* END */
+
+/* FAQs SECTION */
+.faqs-banner {
+  height: 14px;
+  width: 100%;
+  background-color: #212121;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  padding: 30px 75px;
+  padding: 110px 75px; /* For Adjusting */
+  box-sizing: border-box;
+}
+/* END */
