--- a/src/app/components/footer/page.module.css
+++ b/src/app/components/footer/page.module.css
@@ -7,39 +7,40 @@
     /* font-size: 20px; */
   }
   
-  .footer-top {
+.footer-top {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin-bottom: 20px;
   }
   
-  .footer-column {
+.footer-column {
     flex: 1;
     min-width: 180px;
     margin: 0 10px;
+    margin-top: 18px;
     opacity: 90%;
     margin-left: 10px;
   }
   
-  .footer-column h3 {
+.footer-column h3 {
     margin-bottom: 10px;
     font-size: 16px;
     font-weight: 600;
   }
   
-  .footer-column ul {
+.footer-column ul {
     list-style: none;
     padding: 0;
     margin: 0;
   }
   
-  .footer-column ul li {
+.footer-column ul li {
     margin-bottom: 8px;
     font-size: 16px;
   }
   
-  .footer-bottom {
+.footer-bottom {
     display: grid;
     justify-content: center;
     align-items: center;
@@ -48,19 +49,19 @@
     font-size: 14px;
   }
   
-  .social-links {
+.social-links {
     display: flex;
     justify-content: center;
     margin-right: 47px;
   }
 
-  .social-links a {
+.social-links a {
     margin-right: 10px;
     color: #fff;
     text-decoration: none;
   }
   
-  .legal-links {
+.legal-links {
     color: #fff;
     font-weight: bold;
     text-decoration: none;
@@ -68,33 +69,33 @@
     line-height: 30px;
   }
 
-  .legal-copyright {
+.legal-copyright {
     opacity: 60%;
     margin-left: 170px;
     /* margin-top: 30px; */
   }
   
-  .legal-logo {
+.legal-logo {
     margin-left: 180px;
     width: 200px;
   }
-  .legal-links a:hover,
-  .social-links a:hover {
+.legal-links a:hover,
+.social-links a:hover {
     text-decoration: underline;
   }
 
-  .footer-inquire-section {
+.footer-inquire-section {
     width: 700px;
   }
 
-  .footer-inquire-heading {
+.footer-inquire-heading {
     font-weight: bold;
     font-size: 50px;
     margin-bottom: 3px;
     opacity: 90%;
   }
 
-  .footer-inquire-text {
+.footer-inquire-text {
     opacity: 90%;
     width: 450px;
   }
