--- a/src/app/components/footer/page.module.css
+++ b/src/app/components/footer/page.module.css
@@ -1,7 +1,7 @@
 /* FOOTER WORK */
 .footer {
     width: 100%;
-    background-color: #27272E;
+    background-color: #212121;
     color: #fff;
     padding: 40px 70px;
     /* font-size: 20px; */
